force-app/main/default/objects/MUSW__Record_Manage_Setting__mdt/MUSW__Record_Manage_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings for the Record Manage lightning components</description>
    <label>Record Manage Setting</label>
    <pluralLabel>Record Manage Settings</pluralLabel>
</CustomObject>