force-app/main/default/objects/MUSW__Record_Manage_Setting__mdt/fields/MUSW__Allow_Delete__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Allow_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, user will be able to delete records from the RecordManage page</description>
    <label>Allow Delete</label>
    <type>Checkbox</type>
</CustomField>