force-app/main/default/objects/MUSW__Record_Manage_Setting__mdt/fields/MUSW__Fieldset_Edit__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fieldset_Edit__c</fullName>
    <description>Set of fields that are to be shown in the mass edit functionality of RecordManage lightning app</description>
    <label>Field Set Name (Mass Edit)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>