force-app/main/default/objects/MUSW__Record_Manage_Setting__mdt/fields/MUSW__Fieldset_View__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fieldset_View__c</fullName>
    <label>Field Set Name (View)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>