force-app/main/default/objects/MUSW__Record_Manage_Setting__mdt/fields/MUSW__List_Object__c.field-meta.xml
<CustomField>
    <fullName>MUSW__List_Object__c</fullName>
    <label>List Object API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>