force-app/main/default/objects/MUSW__Record_Manage_Setting__mdt/fields/MUSW__Parent_Lookup__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parent_Lookup__c</fullName>
    <label>Parent Lookup Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>