force-app/main/default/objects/MUSW__Record_Manage_Setting__mdt/fields/MUSW__View_Length__c.field-meta.xml
<CustomField>
    <fullName>MUSW__View_Length__c</fullName>
    <defaultValue>50</defaultValue>
    <description>The number of records to show on the page.</description>
    <label>Number of Records per page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>